# bristol-fixes

./: .gitignore  AUTHORS  COPYING  ChangeLog  HOWTO  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  bristol.1  bristoljackstats.1  config.h.in  configure  configure.ac
.github/workflows/: build.yml
bitmaps/: bicon.dia
brighton/: Makefile.am  Makefile.in  brighton.c  brightonArp2600.c  brightonAxxe.c  brightonBME700.c  brightonBassMaker.c  brightonBitOne.c  brightonCLI.c  brightonCS80.c  brightonControllers.c  brightonDX.c  brightonExplorer.c  brightonGranular.c  brightonHammond.c  brightonHammondB3.c  brightonJuno.c  brightonJupiter.c  brightonKeyboards.h  brightonKeys.h  brightonMS20.c  brightonMaster.c  brightonMemoryMoog.c  brightonMini.c  brightonMini.h  brightonMixer.c  brightonMixer.h  brightonMixerMemory.c  brightonMixerMemory.h  brightonMixerMenu.c  brightonOBX.c  brightonOBXa.c  brightonOdyssey.c  brightonPoly.c  brightonPoly6.c  brightonPoly800.c  brightonProOne.c  brightonProphet.c  brightonProphet10.c  brightonProphet52.c  (+19 more)
bristol/: Makefile.am  Makefile.in  activesense.c  aksdco.c  aksdco.h  aksenv.c  aksenv.h  aksfilter.c  aksfilter.h  aksreverb.c  aksreverb.h  arpdco.c  arpdco.h  arpeggiator.c  audioEngine.c  audiothread.c  bit1osc.c  bit1osc.h  blo.c  bristol.c  bristolaks.c  bristolaks.h  bristolarp2600.c  bristolarp2600.h  bristolaxxe.c  bristolaxxe.h  bristolbassmaker.c  bristolbitone.c  bristolbme700.c  bristolbme700.h  bristolcs80.c  bristolcs80.h  bristoldx.c  bristolexplorer.c  bristolexplorer.h  bristolgranular.c  bristolhammond.c  bristolhelp.h  bristoljuno.c  bristoljupiter.c  (+108 more)
include/brighton/: brighton.h  brightonC11.h  brightonC11internals.h  brightonDevtable.h  brightonX11.h  brightonX11internals.h  brightondev.h  brightondevflags.h  brightonevents.h  brightoninternals.h  brightonledstates.h  brightonmenu.h  brightonvectorgraphics.h  icon_bitmap.xbm
include/bristol/: bristol.h  bristolactivesense.h  bristolarpeggiation.h  bristolaudio.h  bristolblo.h  bristoldebug.h  bristolmessages.h  bristolmidi.h  bristolmidiapi.h  bristolmidiapidata.h  bristolmidieventnames.h  bristolsid.h  bristolvers.h  ringbuffer.h
include/slab/: bristoljack.h  bristolpulse.h  engine.h  fbDefs.h  slabDAccess.h  slabDebugMasks.h  slabEffects.h  slabTimer.h  slabalsadev.h  slabaudio.h  slabaudiodev.h  slabbus.h  slabcbuf.h  slabcdefs.h  slabdefinitions.h  slabmixer.h  slabrevisions.h  slabtrack.h  socketToolKit.h
libbrighton/: Makefile.am  Makefile.in  brightonBitmaps.c  brightonButton.c  brightonC.c  brightonColorMgt.c  brightonDevice.c  brightonDispatch.c  brightonDisplay.c  brightonDisplayMgt.c  brightonEventHandlers.c  brightonFastTimer.c  brightonHButton.c  brightonHammond.c  brightonInterface.c  brightonKbd.c  brightonLayer.c  brightonLed.c  brightonLedBlock.c  brightonLever.c  brightonMenu.c  brightonModWheel.c  brightonPanelMgt.c  brightonPic.c  brightonRender.c  brightonRibbonKbd.c  brightonRotary.c  brightonScale.c  brightonShadowMgt.c  brightonSlowTimer.c  brightonTouchpanel.c  brightonVu.c  brightonWindowMgt.c  brightonXpmRead.c  brightonkeymappings.h
libbrightonC11/: Makefile.am  Makefile.in  bColor.c  bDisplay.c  bEvent.c  bRender.c  bRoutines.c  bWindow.c
libbrightonX11/: Makefile.am  Makefile.in  bColor.c  bDisplay.c  bEvent.c  bRender.c  bRoutines.c  bWindow.c
libbristol/: Makefile.am  Makefile.in  audioRoutines.c  bristolcdefs.c  debugging.c  mixroutines.c  opmgt.c
libbristolaudio/: Makefile.am  Makefile.in  audioEngine.c  audioEngineALSA.c  audioEngineJack.c  audioEngineOSS.c  audioGUI.c  audioGUIALSA.c  audioGUIOSS.c  audioMastering.c
libbristolic/: Makefile.am  Makefile.in  sid.c
libbristolmidi/: Makefile.am  Makefile.in  inetClient.c  inetServer.c  interface.c  midiALSADevMan.c  midiDevMan.c  midiFileMgt.c  midiJACKDevMan.c  midiMsgMan.c  midiOSSDevMan.c  midiParse.c  midiRoutines.c  midiSeqDevMan.c  midiTCPDevMan.c  scalaParse.c  slabmessages.h  socketToolKit.c
libbvg/: Makefile.am  Makefile.in  bvg.c  font1.h
memory/BME700/: BME7001.mem  BME7002.mem  BME7003.mem  BME7004.mem  BME7005.mem  BME7006.mem  BME7007.mem  BME7008.mem
memory/aks/: aks0.mem  aks1.mem  aks2.mem  aks999.mem
memory/arp2600/: arp26000.mem  arp26001.mem  arp260017.mem  arp260018.mem  arp260019.mem  arp26002.mem  arp260020.mem  arp260021.mem  arp260022.mem  arp260023.mem  arp26003.mem  arp26004.mem  arp26005.mem  arp26006.mem  arp26007.mem  arp26008.mem  arp26009.mem
memory/axxe/: axxe11.mem  axxe12.mem
memory/bassmaker/: bassmaker0.mem  bassmaker1.mem
memory/bit100/: bit1000.mem  bit1001.mem  bit10010.mem  bit1002.mem  bit1003.mem  bit1004.mem  bit1004.seq  bit1005.mem  bit1006.mem  bit1007.mem  bit1008.mem  bit1009.mem  bitone99.mem
memory/bit99/: bit990.mem  bit991.mem  bit9920.mem  bit993.mem  bit994.mem  bit996.mem  bit997.mem
memory/bitone/: bitone  bitone0.mem  bitone1.mem  bitone12.mem  bitone18.mem  bitone2.mem  bitone24.mem  bitone3.mem  bitone4.mem  bitone5.mem  bitone6.mem  bitone7.mem
memory/cs80/: cs800.mem  cs801.mem  cs8011.mem  cs8012.mem
memory/dx/: dx0.mem  dx10.mem  dx100.mem  dx11.mem  dx110.mem  dx12.mem  dx123.mem  dx130.mem  dx160.mem  dx161.mem  dx170.mem  dx180.mem  dx2.mem  dx220.mem  dx221.mem  dx222.mem  dx231.mem  dx240.mem  dx241.mem  dx3.mem  dx4.mem  dx40.mem  dx41.mem  dx42.mem  dx43.mem  dx44.mem  dx45.mem  dx46.mem  dx5.mem  dx50.mem  dx51.mem  dx52.mem  dx60.mem  dx70.mem  dx90.mem
memory/explorer/: explorer0.mem
memory/hammond/: hammond1.mem  hammond2.mem
memory/hammondB3/: hammondB30.mem  hammondB31.mem  hammondB310.mem  hammondB311.mem  hammondB312.mem  hammondB313.mem  hammondB314.mem  hammondB315.mem  hammondB316.mem  hammondB317.mem  hammondB318.mem  hammondB319.mem  hammondB32.mem  hammondB320.mem  hammondB321.mem  hammondB322.mem  hammondB33.mem  hammondB35.mem  hammondB36.mem  hammondB37.mem  hammondB38.mem  hammondB39.mem
memory/juno/: juno0.mem  juno1.mem  juno100.mem  juno2.mem  juno3.mem  juno4.mem  juno5.mem  juno6.mem  juno7.mem
memory/mini/: mini0.mem  (+33 more)
tools/: azerty4bristol.sh
(+297 files in other folders)
